Fixed scrollbar padding and changed an icon

--- a/components/Room.module.scss
+++ b/components/Room.module.scss
@@ -9,7 +9,7 @@
 	flex-grow: 1;
   color: white;
   margin-left: 15px;
-  margin-top: 10px;
+  padding-top: 10px;
   overflow-y: auto;
 }
 
